--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -53,7 +53,7 @@
        :if (display-graphic-p)
        :config
        (setq exec-path-from-shell-arguments  "") ;; Since the UI is set to interactive in .zshrc.
-       (setq exec-path-from-shell-variables  '("PATH" "GOPATH" "NAME" "ORG_HUGO" "RUSTUP_HOME" "CARGO_HOME" "SSH_AUTH_SOCK" "GNUPGHOME"))
+       (setq exec-path-from-shell-variables  '("PATH" "GOPATH" "NAME" "ORG_HUGO" "RUSTUP_HOME" "CARGO_HOME" "SSH_AUTH_SOCK" "SSH_AGENT_PID" "GNUPGHOME"))
        (exec-path-from-shell-initialize))
    #+end_src
 ** Constant
@@ -987,7 +987,9 @@
           ("C-c d n" . org-gtd-show-all-next)
           ("C-c d s" . org-gtd-show-stuck-projects)
           :map org-gtd-clarify-map
-          ("C-c c" . org-gtd-organize)))
+          ("C-c c" . org-gtd-organize)
+          :map org-agenda-mode-map
+          ("r" . org-gtd-engage)))
       #+end_src
 **** org-roam
      #+begin_src emacs-lisp
